Fixed map too tall bug

--- a/css/OneStopShop.css
+++ b/css/OneStopShop.css
@@ -85,10 +85,10 @@ h5 {
 
 #mapsContent, #map-canvas {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 20px);
 	padding: 0px;
 	position: absolute;
-	top: 40px;
+	top: 20px;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -249,6 +249,7 @@ a:focus {
 .ui-panel-wrapper {
     background-color: #47D1D1;
 	height: 100%;
+    overflow:hidden;
 	vertical-align: middle;
 	text-align: center;
     -webkit-background-size: cover;
@@ -420,7 +421,7 @@ a:focus {
 }
 
 .ui-content {
-	
+	overflow: hidden;
 	text-shadow: #47D1D1;
 }
 
